# ozon-seller-mcp

./: .env.example  README.md  client.py  package-lock.json  pyproject.toml  server.py  utils.py
tools/: analytics.py  communication.py  orders.py  products.py
