[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ozon-seller-mcp"
version = "0.1.0"
description = "MCP server for Ozon Seller API (api-seller.ozon.ru)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
    "httpx",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[project.scripts]
ozon-seller-mcp = "server:main"
